objects/SLP_IDOL_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Database__c</fullName>
        <defaultValue>&quot;GSS_SIC&quot;</defaultValue>
        <description>Crawl database used for queries</description>
        <label>Database</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maximum_Hits__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>The absolute maximum number of hits returned, regardless of Page Size.</description>
        <label>Maximum Hits</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of hits to return at one time. If there are more hits than the current page size, the results will be on the next page.</description>
        <label>Page Size</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <defaultValue>&quot;https://it-services-gw-csc-itg.external.hp.com/gw/esit/sfdc/idol&quot;</defaultValue>
        <description>Base Server External URL</description>
        <label>Server URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>SLP IDOL Settings</label>
</CustomObject>